Fix buttons on iphone view

--- a/src/App.css
+++ b/src/App.css
@@ -7,3 +7,9 @@
   text-align: center;
   color: red;
 }
+
+button {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+}
